--- a/templates/list.html
+++ b/templates/list.html
@@ -1,8 +1,16 @@
+{% extends 'base.html' %}
+
+{% block header %}
+リストです。
+{% endblock header %}
+
+{% block content %}
 {% for item in object_list %}
-
-<ul>
-    <li>{{ item.title }}</li>
-    <li>{{ item.memo }}</li>
-</ul>
-
+<div class="alert alert-secondary" role="alert">
+    {{ item.title }}
+</div>
+<div class="alert alert-secondary" role="alert">
+    {{ item.memo }}
+</div>
 {% endfor %}
+{% endblock content %}
